# f1tenth_simulator

./: .gitignore  README.md  amcl.sh  ferrari.sh  frames.gv  pure_pursuit.sh  teleop_ferrari.sh  wheel_odom.sh
docker_f1tenth/: Dockerfile  README.txt  docker-compose.yaml  run_f1_sim.sh
install/: local_setup.sh  setup.sh
install/ferrari/lib/ferrari/: twist_to_vesc
install/ferrari/share/ferrari/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ferrari/share/ferrari/config/: lidar.rviz
install/ferrari/share/ferrari/launch/: drive.launch.py  ferrari.launch.py  sim.launch.py
install/ferrari/share/ferrari/urdf/: ferrari.xacro  macros.xacro
log/: latest_build
src/: frames.gv  vendor_fix.sh
src/ferrari/: CMakeLists.txt  package.xml  plugins.xml  setup.cfg  setup.py
src/ferrari/config/: controllers.yaml  controllers_op.yaml  drive.rviz  ferrari_lower_chassis.rviz  first_track.world  iccas_track.world  iccas_track_with_static.world  mini_track.world  race_track.world  second_track.world  shortcut.world  shortcut2.world  test.world  with_robot.world
src/ferrari/ferrari/: Twist_to_VESC.py  key_ackermann.py  key_teleop.py  scan_stamp_printer.py
src/ferrari/launch/: drive.launch.py  dual_ferrari.launch.py  ferrari.launch.py  ferrari_op.launch.py  first_track.launch.py  iccas_track_ferrari.launch.py  joy_teleop.launch.py  key_teleop.launch.py  key_teleop_ferrari.launch.py  key_teleop_ferrari_op.launch.py  key_teleop_single.launch.py  mini_track.launch.py  race_track_drive.launch.py  second_track.launch.py  shortcut.launch.py  shortcut2.launch.py
src/ferrari/maps/: iccas_track.pgm  iccas_track.yaml  mini_track.pgm  mini_track.yaml  shortcut.pgm  shortcut.yaml  shortcut2.pgm  shortcut2.yaml
src/ferrari/src/: commands_to_joints_controller.cpp
src/ferrari/urdf/: ackermann.xacro  camera.xacro  ferrari.xacro  ferrari_op.xacro  imu.xacro  lidar.xacro  macros.xacro
src/kora_k3/src/path_planning/: waypoints.py
src/kora_k3/src/path_tracking/: package.xml
src/kora_k3/src/path_tracking/launch/: pure_pursuit.launch
src/kora_k3/src/path_tracking/scripts/: pure_pursuit.py  waypoint_visualization.py
src/kora_k3/src/path_tracking/waypoints/: waypoints.csv  waypoints.npy
src/machine_learning/: package.xml  setup.cfg  setup.py
src/machine_learning/config/: ferrari_op_path.csv  ferrari_op_path_1.csv  ferrari_op_path_3.csv  ferrari_op_path_4.csv  ferrari_op_path_5.csv  isStatic_coord.csv  map_coord.csv  output_4.csv
src/machine_learning/machine_learning/: bar_op_coord.py  bar_op_viz.py  isStatic_viz.py  map_coord_extractor.py  map_coord_viz.py  odom_extractor.py  rosbag_to_csv.py
src/machine_learning/outputs/: ferrari_links_1.csv  ferrari_links_3.csv  ferrari_op_path_1.csv  ferrari_op_path_3.csv
src/odometry/: package.xml  setup.py
src/odometry/config/: ekf_wheel_imu.yaml  ekf_wheel_imu_op.yaml  imu_odom.yaml  wheel_odm.yaml  wheel_odom.yaml  wheel_odom_op.yaml
src/odometry/launch/: dual_wheel_odom.launch.py  ekf_wheel_imu.launch.py  imu_odom.launch.py  wheel_odom.launch.py  wheel_odom_op.launch.py
src/odometry/odometry/: imu_odom_node.py  wheel_odom_node.py  wheel_odom_node_op.py
src/path_planner/: package.xml  setup.py
src/path_planner/config/: iccas_pose.data
src/path_planner/launch/: amcl.launch.py  amcl_op.launch.py  dual_amcl.launch.py  posegraph.launch.py  pure_pursuit.launch.py
src/path_planner/path_planner/: base_link_op_pub.py  base_link_pub.py  drive_main.py  follow_the_gap.py  pure_pursuit.py  waypoint_visualization.py  waypoints.csv  waypoints.npy  waypoints.py
src/path_planner/path_planner/log/: latest_build
src/slam_toolbox/config/: mapper_params_localization.yaml  mapper_params_online_async.yaml
